--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "esbuild": "^0.14.38"
   },
   "devDependencies": {
+    "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
