--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "test": "jest",
     "format:check": "prettier --check \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "format:write": "npm run format:check -- --write",
     "lint:check": "eslint --ext \".js,.jsx,.ts,.tsx\" .",
@@ -36,14 +37,20 @@
     "esbuild": "^0.14.38"
   },
   "devDependencies": {
+    "@emotion/react": "^11.9.0",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.25",
+    "@types/react": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "jest": "^27.5.1",
     "prettier": "^2.6.2",
+    "react": "^18.0.0",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   }
 }
