--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     "jsx": "react"
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "test"]
 }
