--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "format:write": "npm run format:check -- --write",
     "lint:check": "eslint --ext \".js,.jsx,.ts,.tsx\" .",
     "lint:fix": "npm run lint -- --fix",
-    "prepack": "npm run types"
+    "prepack": "npm run build",
+    "release": "release-it"
   },
   "peerDependencies": {
     "esbuild": "^0.14.38"
@@ -50,6 +51,7 @@
     "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
+    "release-it": "^14.14.2",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   }
