Set up tsconfig.lint.json for linting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
   "parserOptions": {
     "ecmaVersion": 9,
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": "./tsconfig.lint.json"
   },
   "rules": {
     "prettier/prettier": "warn",
