Set up npm publish with release-it

--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "README.md",
     "LICENSE"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
+  },
   "engines": {
     "node": ">=13"
   },
