--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -22,11 +22,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Need history for changelog generation
-      - name: Use Node.js 16
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: npm
+          registry-url: 'https://registry.npmjs.org'
 
       - run: npm ci
       - run: npm run lint:check && npm run format:check
@@ -40,4 +39,4 @@ jobs:
           git config --global user.email ${{ secrets.ACTION_GITHUB_EMAIL }};
       - run: npm run release -- ${{ github.event.inputs.version }} --ci
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
