Add workflow step to set NPM auth token

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -34,6 +34,9 @@ jobs:
       - run: npm run test
         if: ${{ always() }}
 
+      - name: npm auth
+        run: npm set "//registry.npmjs.org/:_authToken" ${{ env.NPM_TOKEN }}
+
       - run: |
           git config --global user.name ${{ secrets.ACTION_GITHUB_USERNAME }};
           git config --global user.email ${{ secrets.ACTION_GITHUB_EMAIL }};
